--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
         "classmap": [
             "database/seeds",
             "database/factories"
-        ]
+        ],
+         "files": ["app/Support/helpers.php"]
     },
     "autoload-dev": {
         "psr-4": {
