--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
         "@fortawesome/fontawesome-pro": "^5.8.2",
         "axios": "^0.19",
         "cross-env": "^5.1",
-        "laravel-mix": "^3.0",
+        "laravel-mix": "^4.0.7",
         "lodash": "^4.17.5",
+        "sass": "^1.20.3",
+        "sass-loader": "^7.1.0",
         "tailwindcss": "^1.0.2",
-        "vue": "^2.5.17"
+        "vue": "^2.5.17",
+        "vue-template-compiler": "^2.6.10"
     }
 }
