--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "cross-env": "^5.1",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.5",
+        "prismjs": "^1.16.0",
         "sass": "^1.20.3",
         "sass-loader": "^7.1.0",
         "tailwindcss": "^1.0.2",
