--- a/hooks/build
+++ b/hooks/build
@@ -3,4 +3,7 @@
 # Custom Docker Hub build hook. For reference, see:
 # https://docs.docker.com/docker-cloud/builds/advanced/
 
-docker build --build-arg COMPOSER_AUTH=${COMPOSER_AUTH} --tag ${IMAGE_NAME} .
+docker build \
+    --build-arg COMPOSER_AUTH=${COMPOSER_AUTH} \
+    --build-arg FONT_AWESOME_TOKEN=${FONT_AWESOME_TOKEN} \
+    --tag ${IMAGE_NAME} .
