--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "erusev/parsedown": "^1.7",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.8.*",
@@ -16,6 +17,7 @@
         "laravel/telescope": "^2.0",
         "laravel/tinker": "^1.0",
         "predis/predis": "^1.1",
+        "symfony/yaml": "^4.3",
         "writingink/wink": "^0.0.12"
     },
     "require-dev": {
@@ -25,6 +27,9 @@
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
         "phpunit/phpunit": "^7.5"
+    },
+    "suggest": {
+        "ext-yaml": "Required for initial database seeding"
     },
     "config": {
         "optimize-autoloader": true,
