--- a/database/seeds/data/experience.yaml
+++ b/database/seeds/data/experience.yaml
@@ -57,7 +57,8 @@
 - company: Freedom Financial Network
   title: Senior Software Engineer
   description: |-
-    - Coming soon...
+    - Developed, managed and maintained business-critical RESTful Laravel PHP applications and infrastructure.
+    - Developed continuous integration solutions for delivering micro-service architecture hosted on Google Cloud Platform and Google Kubernetes Engine.
   start_date: '2017-07-10'
   end_date: null
   current_position: true
