--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     },
     "devDependencies": {
         "@fortawesome/fontawesome-pro": "^5.9.0",
+        "@fullhuman/postcss-purgecss": "^1.2.0",
         "axios": "^0.19",
         "cross-env": "^5.1",
         "laravel-mix": "^4.1.2",
+        "laravel-mix-purgecss": "^4.1.0",
         "lodash": "^4.17.5",
         "prismjs": "^1.16.0",
         "sass": "^1.22.3",
