--- a/database/seeds/data/skills.yaml
+++ b/database/seeds/data/skills.yaml
@@ -1,80 +1,107 @@
 - name: PHP
   emphasis: 1
-
-- name: HTML
-  emphasis: 0
-
-- name: CSS
-  emphasis: 0
-
-- name: JavaScript
-  emphasis: 1
+  icon: fab fa-php
 
 - name: Laravel
   emphasis: 1
-
-- name: Vue.js
-  emphasis: 0
-
-- name: Sass / SCSS
-  emphasis: 0
+  icon: fab fa-laravel
 
 - name: Composer
   emphasis: 1
+  icon: null
+
+- name: HTML
+  emphasis: 0
+  icon: fab fa-html5
+
+- name: CSS
+  emphasis: 0
+  icon: fab fa-css3
+
+- name: JavaScript
+  emphasis: 1
+  icon: fab fa-js
+
+- name: Vue.js
+  emphasis: 0
+  icon: fab fa-vuejs
 
 - name: npm
   emphasis: 0
+  icon: fab fa-npm
 
 - name: Yarn
   emphasis: -1
+  icon: fab fa-yarn
+
+- name: Sass / SCSS
+  emphasis: 0
+  icon: fab fa-sass
 
 - name: Git Version Control
   emphasis: 1
+  icon: fab fa-git-alt
 
 - name: MySQL
-  emphasis: 1
+  emphasis: 0
+  icon: far fa-database
 
 - name: Postgres
   emphasis: 0
+  icon: far fa-database
 
 - name: Linux
   emphasis: 1
+  icon: fab fa-linux
 
 - name: Nginx
   emphasis: 0
+  icon: null
 
 - name: Apache
   emphasis: 0
+  icon: null
 
 - name: MVC Frameworks
   emphasis: 0
+  icon: null
 
 - name: Docker
   emphasis: 1
+  icon: fab fa-docker
 
 - name: Kubernetes
   emphasis: 0
+  icon: null
 
 - name: Continuous Integration
   emphasis: 1
+  icon: null
 
 - name: CakePHP
   emphasis: -1
+  icon: null
 
 - name: Travis CI
   emphasis: 0
+  icon: null
 
 - name: Jenkins
   emphasis: -1
+  icon: fab fa-jenkins
 
 - name: Windows
   emphasis: 0
+  icon: fab fa-windows
 
 - name: Networking
   emphasis: -1
+  icon: far fa-network-wired
 
 - name: Google Cloud Platform
   emphasis: 1
+  icon: fab fa-google
 
 - name: Amazon Web Services
   emphasis: 0
+  icon: fab fa-aws
