Copmoser install instead of update

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,4 +30,4 @@ before_install:
   - npm ci
 
 install:
-  - "[[ $COMPOSER_PREFER == 'lowest' ]] && composer update --prefer-lowest || composer update"
+  - "[[ $COMPOSER_PREFER == 'lowest' ]] && composer update --prefer-lowest || composer install"
