--- a/database/seeds/data/projects.yaml
+++ b/database/seeds/data/projects.yaml
@@ -22,6 +22,15 @@
   project_url: https://twine.phlak.net
   source_url: https://github.com/PHLAK/Twine
 
+- name: vueColorClock
+  description: |-
+    A color changing clock, the background color changes with every hour,
+    minute and second.
+
+    ![vueColorClock](https://raw.githubusercontent.com/PHLAK/vueColorClock/master/screenshot.png)
+  project_url: https://colorclock.phlak.net
+  source_url: https://github.com/PHLAK/vueColorClock
+
 - name: SemVer
   description: |-
     A semantic versioning helper library for PHP.
