--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,21 @@
 {
-    "name": "laravel/laravel",
+    "name": "phlak/chriskankiewicz.com",
     "type": "project",
-    "description": "The Laravel Framework.",
-    "keywords": [
-        "framework",
-        "laravel"
-    ],
+    "description": "The homepage of Chris Kankiewicz.",
+    "keywords": ["Chris Kankiewicz"],
     "license": "MIT",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.2",
         "erusev/parsedown": "^1.7",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.3",
-        "laravel/framework": "5.8.*",
-        "laravel/nova": "^2.0",
-        "laravel/telescope": "^2.0",
+        "laravel/framework": "^6.0",
+        "laravel/nova": "^2.1",
+        "laravel/telescope": "^2.1",
         "laravel/tinker": "^1.0",
         "predis/predis": "^1.1",
         "symfony/yaml": "^4.3",
-        "writingink/wink": "^0.0.12"
+        "writingink/wink": "^0.1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
