--- a/.editorconfig
+++ b/.editorconfig
@@ -15,7 +15,7 @@ indent_size = 4
 [*.md]
 trim_trailing_whitespace = false
 
-[*.{yaml,yml}]
+[*.{yml,yaml}]
 indent_size = 2
 indent_style = space
 
