--- a/composer.json
+++ b/composer.json
@@ -13,17 +13,17 @@
         "laravel/nova": "^2.1",
         "laravel/telescope": "^2.1",
         "laravel/tinker": "^1.0",
-        "predis/predis": "^1.1",
         "symfony/yaml": "^4.3",
         "writingink/wink": "^0.1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
+        "facade/ignition": "^1.4",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^7.5"
+        "phpunit/phpunit": "^8.0"
     },
     "suggest": {
         "ext-yaml": "Required for initial database seeding"
