Updated handling of Nova Composer credentials

--- a/.env.example
+++ b/.env.example
@@ -44,4 +44,9 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-COMPOSER_AUTH="{}"
+NOVA_USERNAME=
+NOVA_PASSWORD=
+
+FONT_AWESOME_TOKEN=
+
+GITHUB_TOKEN=
