--- a/hooks/build
+++ b/hooks/build
@@ -4,6 +4,7 @@
 # https://docs.docker.com/docker-cloud/builds/advanced/
 
 docker build \
-    --build-arg COMPOSER_AUTH=${COMPOSER_AUTH} \
     --build-arg FONT_AWESOME_TOKEN=${FONT_AWESOME_TOKEN} \
+    --build-arg NOVA_USERNAME=${NOVA_USERNAME} \
+    --build-arg NOVA_PASSWORD=${NOVA_PASSWORD} \
     --tag ${IMAGE_NAME} .
