--- a/database/seeds/data/experience.yaml
+++ b/database/seeds/data/experience.yaml
@@ -19,6 +19,11 @@
   end_date: '2011-04-01'
   current_position: false
   location: Phoenix, Arizona
+  skills:
+    - PHP
+    - HTML
+    - CSS
+    - Linux
 
 - company: Arizona State University
   title: Web Application Developer
@@ -30,6 +35,11 @@
   end_date: '2014-06-01'
   current_position: false
   location: Phoenix, Arizona
+  skills:
+    - PHP
+    - CakePHP
+    - Drupal
+    - Code Ignighter
 
 - company: IO Data Center
   title: Cloud Engineer
@@ -43,6 +53,13 @@
   end_date: '2015-07-01'
   current_position: false
   location: Scottsdale, Arizona
+  skills:
+    - OpenStack
+    - SaltStack
+    - Arch Linux
+    - Docker
+    - Python
+    - Vagrant
 
 - company: IO Data Center
   title: Software Development Engineer
@@ -53,6 +70,12 @@
   end_date: '2017-03-01'
   current_position: false
   location: Scottsdale, Arizona
+  skills:
+    - PHP
+    - Laravel
+    - Sass / SCSS
+    - Composer
+    - Packagist
 
 - company: Freedom Financial Network
   title: Senior Software Engineer
@@ -63,3 +86,9 @@
   end_date: null
   current_position: true
   location: Tempe, Arizona
+  skills:
+    - PHP
+    - Laravel
+    - Docker
+    - Google Cloud Platform
+    - Google Kubernetes Engine
