--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -22,6 +22,7 @@ return PhpCsFixer\Config::create()->setRules([
     'new_with_braces' => false,
     'no_multiline_whitespace_before_semicolons' => true,
     'no_useless_else' => true,
+    'no_superfluous_phpdoc_tags' => false,
     'no_useless_return' => true,
     'not_operator_with_successor_space' => true,
     'phpdoc_to_comment' => false,
