--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -25,6 +25,7 @@ return PhpCsFixer\Config::create()->setRules([
     'no_superfluous_phpdoc_tags' => false,
     'no_useless_return' => true,
     'not_operator_with_successor_space' => true,
+    'ordered_imports' => false,
     'phpdoc_to_comment' => false,
     'phpdoc_no_empty_return' => false,
     'phpdoc_order' => true,
