--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME="Chris Kankiewicz"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://chriskankiewicz.local
 APP_TIMEZONE=UTC
 
 LOG_CHANNEL=stack
