--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,18 +6,18 @@ services:
     build:
       context: .
       args:
-        NOVA_USERNAME: ${NOVA_USERNAME}
-        NOVA_PASSWORD: ${NOVA_PASSWORD}
-        FONT_AWESOME_TOKEN: ${FONT_AWESOME_TOKEN}
+        NOVA_USERNAME: ${NOVA_USERNAME?Not set or empty}
+        NOVA_PASSWORD: ${NOVA_PASSWORD?Not set or empty}
+        FONT_AWESOME_TOKEN: ${FONT_AWESOME_TOKEN?Not set or empty}
       target: development
     environment:
       APP_ENV: 'docker'
       LOG_CHANNEL: 'stderr'
       DB_HOST: 'chriskankiewicz-dot-com-mysql'
       DB_PORT: 3306
-      DB_DATABASE: ${DB_DATABASE}
-      DB_USERNAME: ${DB_USERNAME}
-      DB_PASSWORD: ${DB_PASSWORD}
+      DB_DATABASE: ${DB_DATABASE:-homestead}
+      DB_USERNAME: ${DB_USERNAME:-homestead}
+      DB_PASSWORD: ${DB_PASSWORD:-secret}
       CACHE_DRIVER: 'redis'
       REDIS_HOST: 'chriskankiewicz-dot-com-redis'
       REDIS_PORT: 6379
@@ -32,19 +32,19 @@ services:
     container_name: chriskankiewicz-dot-com-mysql
     image: mysql:5.7
     ports:
-      - ${DB_PORT}:3306
+      - ${DB_PORT:-3306}:3306
     environment:
       MYSQL_RANDOM_ROOT_PASSWORD: 'yes'
-      MYSQL_DATABASE: ${DB_DATABASE}
-      MYSQL_USER: ${DB_USERNAME}
-      MYSQL_PASSWORD: ${DB_PASSWORD}
+      MYSQL_DATABASE: ${DB_DATABASE:-homestead}
+      MYSQL_USER: ${DB_USERNAME:-homestead}
+      MYSQL_PASSWORD: ${DB_PASSWORD:-secret}
     restart: unless-stopped
 
   redis:
     container_name: chriskankiewicz-dot-com-redis
     image: redis:5.0
     ports:
-      - ${REDIS_PORT}:6379
+      - ${REDIS_PORT:-6379}:6379
     restart: unless-stopped
 
 networks:
