--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,13 @@
         "php": "^7.2",
         "erusev/parsedown": "^1.7",
         "fideloper/proxy": "^4.0",
+        "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/nova": "^3.0",
         "laravel/telescope": "^3.0",
         "laravel/tinker": "^2.0",
+        "laravel/ui": "^2.0",
         "symfony/yaml": "^5.0"
     },
     "require-dev": {
@@ -21,7 +23,7 @@
         "filp/whoops": "^2.0",
         "friendsofphp/php-cs-fixer": "^2.15",
         "fzaninotto/faker": "^1.4",
-        "mockery/mockery": "^1.0",
+        "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
         "phpunit/phpunit": "^8.5"
     },
