--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5",
+        "phpunit/phpunit": "^8.5 || ^9.0",
         "vimeo/psalm": "^3.10"
     },
     "suggest": {
