--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ dist: bionic
 language: php
 
 php:
-  - 7.3
   - 7.4
   - nightly
 
@@ -25,7 +24,7 @@ before_install:
   - npm config set "//npm.fontawesome.com/:_authToken" $FONT_AWESOME_TOKEN
 
 install:
-  - composer install
+  - composer install --no-suggest
   - npm ci && npm run development
 
 script:
