--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/telescope": "^3.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
-        "symfony/yaml": "^5.0"
+        "symfony/yaml": "^5.0",
+        "themsaid/wink": "^1.1"
     },
     "require-dev": {
         "php": ">=7.4",
