--- a/.editorconfig
+++ b/.editorconfig
@@ -19,6 +19,10 @@ trim_trailing_whitespace = false
 indent_size = 2
 indent_style = space
 
+[*.xml]
+indent_size = 4
+indent_style = space
+
 [Makefile]
 indent_size = 4
 indent_style = tab
