--- a/composer.json
+++ b/composer.json
@@ -66,8 +66,8 @@
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi",
-            "@php artisan ide-helper:generate",
-            "@php artisan ide-helper:models --nowrite"
+            "@php artisan ide-helper:generate || true",
+            "@php artisan ide-helper:models --nowrite || true"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
