--- a/composer.json
+++ b/composer.json
@@ -8,26 +8,26 @@
         "php": "^7.4",
         "erusev/parsedown": "^1.7",
         "fideloper/proxy": "^4.0",
-        "fruitcake/laravel-cors": "^1.0",
+        "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0",
-        "laravel/framework": "^7.0",
+        "laravel/framework": "^8.0",
         "laravel/nova": "^3.0",
-        "laravel/telescope": "^3.0",
+        "laravel/telescope": "^4.0",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.0",
+        "laravel/ui": "^3.0",
         "spatie/yaml-front-matter": "^2.0",
         "symfony/yaml": "^5.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.8",
         "beyondcode/laravel-dump-server": "^1.0",
-        "facade/ignition": "^2.0",
+        "facade/ignition": "^2.3",
         "filp/whoops": "^2.0",
         "friendsofphp/php-cs-fixer": "^2.16",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5 || ^9.0",
+        "nunomaduro/collision": "^5.0",
+        "phpunit/phpunit": "^9.3",
         "vimeo/psalm": "^3.10"
     },
     "suggest": {
@@ -47,12 +47,10 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Database\\Factories\\": "database/factories/",
+            "Database\\Seeders\\": "database/seeders/"
         },
-        "classmap": [
-            "database/seeds",
-            "database/factories"
-        ],
          "files": ["app/Support/helpers.php"]
     },
     "autoload-dev": {
