--- a/.travis.yml
+++ b/.travis.yml
@@ -29,5 +29,5 @@ install:
 
 script:
   - vendor/bin/php-cs-fixer fix --diff --dry-run
-  - vendor/bin/psalm --show-info=true
+  - vendor/bin/phpstan analyze
   - vendor/bin/phpunit --coverage-text
