--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^5.0",
+        "nunomaduro/larastan": "^0.6.4",
         "phlak/coding-standards": "^1.1",
         "phpunit/phpunit": "^9.3",
         "vimeo/psalm": "^3.10"
