Enabled larastan checkModelProperties check

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -24,6 +24,7 @@ parameters:
     checkFunctionNameCase: true
     # checkMissingClosureNativeReturnTypehintRule: true
     checkMissingIterableValueType: false
+    checkModelProperties: true
     # checkTooWideReturnTypesInProtectedAndPublicMethods: true
     checkUninitializedProperties: true
 
