--- a/database/seeders/data/experience.yaml
+++ b/database/seeders/data/experience.yaml
@@ -97,9 +97,24 @@
   description: |-
     - PHP software development.
   start_date: '2019-09-30'
-  end_date: null
+  end_date: '2020-08-07'
   location: Remote
   skills:
     - PHP
     - Laravel
+    - Docker
+
+- company: ClearChecks
+  title: Senior Software Engineer
+  description: |-
+    - Developed and maintained ClearChecks application
+    - Refactored legacy code to support PHP 7.4
+    - Updated application from Laravel 5.6 to Laravel 8
+  start_date: '2020-08-10'
+  end_date: null
+  location: Phoenix, Arizona
+  skills:
+    - PHP
+    - Laravel
+    - Vue.js
     - Docker
