--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
     "devDependencies": {
         "@fortawesome/fontawesome-pro": "^5.15.1",
         "@fullhuman/postcss-purgecss": "^3.0.0",
+        "autoprefixer": "^10.0.2",
         "axios": "^0.21.0",
         "cross-env": "^7.0.2",
         "laravel-mix": "^5.0.9",
         "laravel-mix-purgecss": "^5.0.0",
         "lodash": "^4.17.20",
+        "postcss": "^8.1.7",
         "prismjs": "^1.22.0",
         "sass": "^1.29.0",
         "sass-loader": "^10.1.0",
-        "tailwindcss": "^1.9.6",
+        "tailwindcss": "^2.0.1",
         "vue": "^2.6.12",
         "vue-template-compiler": "^2.6.12"
     }
