--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ services:
   - mysql
 
 before_install:
+  - nvm install 14.15
   - npm config set "@fortawesome:registry" https://npm.fontawesome.com/
   - npm config set "//npm.fontawesome.com/:_authToken" $FONT_AWESOME_TOKEN
 
