--- a/composer.json
+++ b/composer.json
@@ -29,8 +29,7 @@
         "nunomaduro/collision": "^5.0",
         "nunomaduro/larastan": "^0.6.4",
         "phlak/coding-standards": "^1.1",
-        "phpunit/phpunit": "^9.3",
-        "vimeo/psalm": "^3.10"
+        "phpunit/phpunit": "^9.3"
     },
     "suggest": {
         "ext-yaml": "Required for initial database seeding"
