--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "filp/whoops": "^2.0",
         "friendsofphp/php-cs-fixer": "^2.16",
         "fzaninotto/faker": "^1.4",
+        "laravel/sail": "^0.0.8",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^5.0",
         "nunomaduro/larastan": "^0.6.4",
