--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,47 +1,80 @@
-version: '3.4'
-
+# For more information: https://laravel.com/docs/sail
+version: "3"
 services:
-  app:
-    container_name: chriskankiewicz-dot-com-app
-    build: .
+  laravel.test:
+    build:
+      context: ./vendor/laravel/sail/runtimes/8.0
+      dockerfile: Dockerfile
+      args:
+        WWWGROUP: "${WWWGROUP}"
+    image: sail-8.0/app
+    ports:
+      - "${APP_PORT:-80}:80"
     environment:
-      APP_ENV: 'local'
-      LOG_CHANNEL: 'stderr'
-      DB_HOST: 'chriskankiewicz-dot-com-mysql'
-      DB_PORT: 3306
-      DB_DATABASE: ${DB_DATABASE:-app}
-      DB_USERNAME: ${DB_USERNAME:-laravel}
-      DB_PASSWORD: ${DB_PASSWORD:-secret}
-      CACHE_DRIVER: 'redis'
-      REDIS_HOST: 'chriskankiewicz-dot-com-redis'
-      REDIS_PORT: 6379
+      DB_HOST: mysql
+      WWWUSER: "${WWWUSER}"
+      LARAVEL_SAIL: 1
       VIRTUAL_HOST: chriskankiewicz.local
     volumes:
-      - ./:/var/www/html
-      - ./.docker/php/config/php.ini:/usr/local/etc/php/php.ini
-      - ./.docker/apache2/config/000-default.conf:/etc/apache2/sites-available/000-default.conf
-    restart: on-failure
-
+      - ".:/var/www/html"
+    networks:
+      - development
+      - sail
+    depends_on:
+      - mysql
+      - redis
+      # - selenium
+  # selenium:
+  #   image: 'selenium/standalone-chrome'
+  #   volumes:
+  #     - '/dev/shm:/dev/shm'
+  #   networks:
+  #     - sail
+  #   depends_on:
+  #     - laravel.test
   mysql:
-    container_name: chriskankiewicz-dot-com-mysql
-    image: mysql:8.0
+    image: "mysql:8.0"
     ports:
-      - ${DB_PORT:-3306}:3306
+      - "${FORWARD_DB_PORT:-3306}:3306"
     environment:
-      MYSQL_RANDOM_ROOT_PASSWORD: 'yes'
-      MYSQL_DATABASE: ${DB_DATABASE:-app}
-      MYSQL_USER: ${DB_USERNAME:-laravel}
-      MYSQL_PASSWORD: ${DB_PASSWORD:-secret}
-    restart: on-failure
-
+      MYSQL_ROOT_PASSWORD: "${DB_PASSWORD}"
+      MYSQL_DATABASE: "${DB_DATABASE}"
+      MYSQL_USER: "${DB_USERNAME}"
+      MYSQL_PASSWORD: "${DB_PASSWORD}"
+      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
+    volumes:
+      - "sailmysql:/var/lib/mysql"
+    networks:
+      - sail
   redis:
-    container_name: chriskankiewicz-dot-com-redis
-    image: redis:6.0
+    image: "redis:alpine"
     ports:
-      - ${REDIS_PORT:-6379}:6379
-    restart: on-failure
-
+      - "${FORWARD_REDIS_PORT:-6379}:6379"
+    volumes:
+      - "sailredis:/data"
+    networks:
+      - sail
+  # memcached:
+  #   image: 'memcached:alpine'
+  #   ports:
+  #     - '11211:11211'
+  #   networks:
+  #     - sail
+  mailhog:
+    image: "mailhog/mailhog:latest"
+    ports:
+      - 1025:1025
+      - 8025:8025
+    networks:
+      - sail
 networks:
-  default:
+  development:
     external:
       name: development
+  sail:
+    driver: bridge
+volumes:
+  sailmysql:
+    driver: local
+  sailredis:
+    driver: local
