--- a/package.json
+++ b/package.json
@@ -2,21 +2,21 @@
     "private": true,
     "scripts": {
         "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "mix --production"
     },
     "devDependencies": {
         "@fortawesome/fontawesome-pro": "^5.15.1",
         "@fullhuman/postcss-purgecss": "^3.1.3",
         "autoprefixer": "^10.1.0",
-        "axios": "^0.21.0",
+        "axios": "^0.21.1",
         "cross-env": "^7.0.3",
-        "laravel-mix": "^5.0.9",
-        "laravel-mix-purgecss": "^5.0.0",
+        "laravel-mix": "^6.0.5",
+        "laravel-mix-purgecss": "^6.0.0",
         "lodash": "^4.17.20",
         "postcss": "^8.2.1",
         "prismjs": "^1.22.0",
@@ -24,6 +24,7 @@
         "sass-loader": "^10.1.0",
         "tailwindcss": "^2.0.2",
         "vue": "^2.6.12",
+        "vue-loader": "^15.9.6",
         "vue-template-compiler": "^2.6.12"
     }
 }
