--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/telescope": "^4.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
+        "spatie/laravel-feed": "^3.1",
         "spatie/yaml-front-matter": "^2.0",
         "symfony/yaml": "^5.0"
     },
