--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ language: php
 
 php:
   - 7.4
+  - 8.0
   - nightly
 
 jobs:
@@ -29,6 +30,6 @@ install:
   - npm ci && npm run production --verbose
 
 script:
-  - vendor/bin/php-cs-fixer fix --diff --dry-run
+  - '[[ ${TRAVIS_PHP_VERSION:0:1} == "7" ]] && vendor/bin/php-cs-fixer fix --diff --dry-run || echo "Skipping coding standards check"'
   - vendor/bin/phpstan analyze
   - vendor/bin/phpunit --coverage-text
