Revert "Test PHP 8 in CI"
This reverts commit 91fbd18a1f373dc24a882ab701dc5a96a08e37b6.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ language: php
 
 php:
   - 7.4
-  - 8.0
   - nightly
 
 jobs:
@@ -30,6 +29,6 @@ install:
   - npm ci && npm run production --verbose
 
 script:
-  - '[[ ${TRAVIS_PHP_VERSION:0:1} == "7" ]] && vendor/bin/php-cs-fixer fix --diff --dry-run || echo "Skipping coding standards check"'
+  - vendor/bin/php-cs-fixer fix --diff --dry-run
   - vendor/bin/phpstan analyze
   - vendor/bin/phpunit --coverage-text
