--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "autoprefixer": "^10.2.4",
         "axios": "^0.21.1",
         "cross-env": "^7.0.3",
+        "eslint": "^7.19.0",
+        "eslint-plugin-vue": "^7.5.0",
         "laravel-mix": "^6.0.11",
         "laravel-mix-purgecss": "^6.0.0",
         "lodash": "^4.17.20",
