--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "private": true,
     "scripts": {
+        "cs": "npx eslint resources/js/**/*.{js,vue} || true",
         "dev": "npm run development",
         "development": "mix",
         "watch": "mix watch",
