--- a/.github/workflows/test-suite.yaml
+++ b/.github/workflows/test-suite.yaml
@@ -8,6 +8,7 @@ jobs:
 
     env:
       DB_DATABASE: app
+      DB_USERNAME: root
 
     services:
       mysql:
@@ -16,7 +17,7 @@ jobs:
             MYSQL_ALLOW_EMPTY_PASSWORD: yes
             MYSQL_DATABASE: ${{ env.DB_DATABASE }}
         ports:
-            - 3306
+          - 3306:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     strategy:
@@ -31,7 +32,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-versions }}
-          extensions: mbstring, intl
+          extensions: intl, json, mbstring, openssl
           coverage: xdebug
 
       - name: Get Composer Cache Directory
@@ -84,7 +85,5 @@ jobs:
           APP_DEBUG: true
           APP_ENV: testing
           APP_KEY: ${{ secrets.APP_KEY }}
-          DB_PORT: ${{ job.services.mysql.ports[3306] }}
-          DB_USERNAME: root
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: vendor/bin/phpunit --coverage-text
