--- a/.github/workflows/test-suite.yaml
+++ b/.github/workflows/test-suite.yaml
@@ -11,6 +11,8 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install PHP Dependencies
+        env:
+          COMPOSER_AUTH: ${{ secrets.COMPOSER_AUTH }}
         run: composer update
 
       - name: Verify Coding Standards
@@ -25,6 +27,8 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install PHP Dependencies
+        env:
+          COMPOSER_AUTH: ${{ secrets.COMPOSER_AUTH }}
         run: composer update
 
       - name: Run Static Analysis
