--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,21 +1,22 @@
 # For more information: https://laravel.com/docs/sail
-version: "3"
+version: '3'
+
 services:
-  laravel.test:
+  laravel:
     build:
       context: ./vendor/laravel/sail/runtimes/8.0
       dockerfile: Dockerfile
       args:
-        WWWGROUP: "${WWWGROUP}"
+        WWWGROUP: '${WWWGROUP}'
     image: sail-8.0/app
     ports:
-      - "${APP_PORT:-80}:80"
+      - '${APP_PORT:-80}:80'
     environment:
-      WWWUSER: "${WWWUSER}"
+      WWWUSER: '${WWWUSER}'
       LARAVEL_SAIL: 1
       VIRTUAL_HOST: chriskankiewicz.local
     volumes:
-      - ".:/var/www/html"
+      - '.:/var/www/html'
     networks:
       - development
       - sail
@@ -23,65 +24,57 @@ services:
       - mysql
       - redis
       - node
-      # - selenium
-  # selenium:
-  #   image: 'selenium/standalone-chrome'
-  #   volumes:
-  #     - '/dev/shm:/dev/shm'
-  #   networks:
-  #     - sail
-  #   depends_on:
-  #     - laravel.test
+
   mysql:
-    image: "mysql:8.0"
+    image: 'mysql:8.0'
     ports:
-      - "${FORWARD_DB_PORT:-3306}:3306"
+      - '${FORWARD_DB_PORT:-3306}:3306'
     environment:
-      MYSQL_ROOT_PASSWORD: "${DB_PASSWORD}"
-      MYSQL_DATABASE: "${DB_DATABASE}"
-      MYSQL_USER: "${DB_USERNAME}"
-      MYSQL_PASSWORD: "${DB_PASSWORD}"
-      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
+      MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
+      MYSQL_DATABASE: '${DB_DATABASE}'
+      MYSQL_USER: '${DB_USERNAME}'
+      MYSQL_PASSWORD: '${DB_PASSWORD}'
+      MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
     volumes:
       - "sailmysql:/var/lib/mysql"
     networks:
       - sail
+    healthcheck:
+          test: ["CMD", "mysqladmin", "ping"]
+
   redis:
-    image: "redis:alpine"
+    image: 'redis:alpine'
     ports:
-      - "${FORWARD_REDIS_PORT:-6379}:6379"
+      - '${FORWARD_REDIS_PORT:-6379}:6379'
     volumes:
-      - "sailredis:/data"
+      - 'sailredis:/data'
     networks:
       - sail
-
-  # memcached:
-  #   image: 'memcached:alpine'
-  #   ports:
-  #     - '11211:11211'
-  #   networks:
-  #     - sail
+    healthcheck:
+        test: ["CMD", "redis-cli", "ping"]
 
   node:
     image: node:14.16
     volumes:
-      - ".:/var/www/html"
+      - '.:/var/www/html'
     working_dir: /var/www/html
     command: npm run watch
 
   mailhog:
-    image: "mailhog/mailhog:latest"
+    image: 'mailhog/mailhog:latest'
     ports:
-      - 1025:1025
-      - 8025:8025
+      - '${FORWARD_MAILHOG_PORT:-1025}:1025'
+      - '${FORWARD_MAILHOG_DASHBOARD_PORT:-8025}:8025'
     networks:
       - sail
+
 networks:
   development:
     external:
       name: development
   sail:
     driver: bridge
+
 volumes:
   sailmysql:
     driver: local
