--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "beyondcode/laravel-dump-server": "^1.0",
         "facade/ignition": "^2.3",
         "filp/whoops": "^2.0",
-        "friendsofphp/php-cs-fixer": "^2.16",
+        "friendsofphp/php-cs-fixer": "^2.16 !=2.18.3",
         "fzaninotto/faker": "^1.4",
         "laravel/sail": "^1.0",
         "mockery/mockery": "^1.3.1",
