--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,9 @@
         "barryvdh/laravel-ide-helper": "^2.8",
         "beyondcode/laravel-dump-server": "^1.0",
         "facade/ignition": "^2.3",
+        "fakerphp/faker": "^1.9.1",
         "filp/whoops": "^2.0",
         "friendsofphp/php-cs-fixer": "^2.16 !=2.18.3",
-        "fzaninotto/faker": "^1.4",
         "laravel/sail": "^1.0",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^5.0",
