--- a/database/seeders/data/accomplishments.yaml
+++ b/database/seeders/data/accomplishments.yaml
@@ -1,6 +1,6 @@
 - description: Eagle Scout
 - description: Attended Laracon 2016, 2018
-- description: Attended Laracon Online 2017, 2018, 2019
+- description: Regular attendee of [Laracon Online](https://laracon.net)
 - description: Regular [azPHP](https://www.meetup.com/azPHPUG/) attendee/presenter
 - description: Active [PHX2600](https://www.phx2600.org) member
 - description: Past attendee of Defcon Security Conference
